--- a/distributed-stuff/package.json
+++ b/distributed-stuff/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "minimist": "^1.2.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
   }
