--- a/distributed-stuff/package.json
+++ b/distributed-stuff/package.json
@@ -2,7 +2,7 @@
   "name": "distributed-stuff",
   "version": "1.0.0",
   "description": "",
-  "main": "make-droplet.js",
+  "main": "distribute-task.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "dependencies": {
     "minimist": "^1.2.0",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "scp2": "^0.5.0"
   }
 }
