--- a/distributed-stuff/package.json
+++ b/distributed-stuff/package.json
@@ -13,6 +13,7 @@
     "minimist": "^1.2.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
-    "scp2": "^0.5.0"
+    "scp2": "^0.5.0",
+    "sequest": "^0.10.0"
   }
 }
