--- a/distributed-stuff/package.json
+++ b/distributed-stuff/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "minimist": "^1.2.0",
+    "morgan": "^1.9.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "scp2": "^0.5.0",
